# MegFlow

./: .gitattributes  .gitignore  .gitlab-ci.yml  ACKNOWLEDGEMENTS  Cargo.toml  Dockerfile  Dockerfile.github-dev  Dockerfile.github-release  README  README.en.md  README.md  README_zh.md  attr.py  config.toml  det.py  doc_link_checker.py  generator.py  lite.py  model.py  pylintrc  requires.txt
ci/: build_doc.sh  cargo-config  doc_link_checker.py  (+5 more)
flow-cffi/: Cargo.toml  cbindgen.sh  cbindgen.toml
flow-cffi/ffi/: megflow.h
flow-cffi/src/: error.rs  graph.rs  lib.rs  types.rs  utils.rs
flow-cffi/tests/: basis.rs  broadcast.toml  noop.toml  transform.toml  utils.rs
flow-message/: Cargo.toml
flow-message/src/: c.rs  lib.rs
flow-message/src/cross/: cow_list.rs  cow_map.rs  list.rs  map.rs  mod.rs
flow-message/src/cross/data/: list.rs  mod.rs  value.rs
flow-message/src/cross/python/: cow_list.rs  cow_map.rs  iterator.rs  list.rs  map.rs  mod.rs
flow-plugins/: Cargo.toml
flow-plugins/examples/: bytes_server.toml  image.toml  image_input.toml  image_server.toml  video.toml  video_input.toml  video_server.toml
flow-plugins/src/: bytes_server.rs  image_input.rs  image_server.rs  lib.rs  video_input.rs  video_server.rs
flow-plugins/src/utils/: args_parser.rs  bare_json.rs  bytes.rs  codec.rs  either.rs  error.rs  find_lib.rs  frame.rs  image.rs  mod.rs  multipart.rs
flow-python/: Cargo.toml  gen_whl.sh  requirements.txt  setup.py  whl-py36-setup.py  whl-py37-setup.py  whl-py38-setup.py
flow-python/examples/: .gitattributes  utils.py
flow-python/examples/application/: requires.txt  utils.py
flow-python/examples/application/cat_finder/: README.md  det.py  image_gpu.toml  redis_proxy.py  reid_image.py  shaper.py  video_cpu.toml  video_visualize.toml
flow-python/examples/application/cat_finder/visualize/: visualize.py
flow-python/examples/application/electric_bicycle/: README.md  electric_bicycle.toml  shaper.py
flow-python/examples/application/misc/: bytes_client.py  image_client.py
flow-python/examples/application/misc/visualize_client/: push_video.py
flow-python/examples/application/simple_classification/: lite.py
flow-python/examples/application/simple_det_classify/: det.py  lite.py  video_cpu.toml  video_test.toml
flow-python/examples/application/video_super_resolution/: README.md  config.toml  lite.py  model.py  requires.sh  requires.txt
flow-python/examples/application/warehouse/detection_memd/: README.md  __init__.py  main.py  requirements.txt
flow-python/examples/application/warehouse/detection_yolox/: README.md  lite.py
flow-python/examples/application/warehouse/quality_naive/: __init__.py
flow-python/examples/application/warehouse/reid_alignedreid/: README.md  main.py  model.py  process.py
flow-python/examples/basis_function/batch/: batch.toml  op.py
flow-python/examples/basis_function/demux/: demux.toml  op.py
flow-python/examples/basis_function/future/: future.toml  op.py
flow-python/examples/basis_function/interactive/: main.py
flow-python/examples/basis_function/map_reduce/: map_reduce.toml  op.py
flow-python/examples/basis_function/nest/: nest.toml  op.py
flow-python/examples/basis_function/profile/: profile.toml  sink.py  source.py  transport.py
flow-python/examples/basis_function/scripts/: gen_profile_config.py
flow-python/examples/basis_function/unused/: op.py  unused.toml
flow-python/examples/cat_finder/: .gitattributes  README.md  README.zh.md  det.py  image_cpu.toml  redis_proxy.py  reid_image.py  reid_video.py  shaper.py  track.py  video_gpu.toml
flow-python/examples/cat_finder/images/: .gitattributes
flow-python/examples/cat_finder/visualize/: __init__.py  shaper_visualize.py  visualize.py
flow-python/examples/electric_bicycle/: README.md  README.zh.md  __init__.py  det.py  redis_proxy.py  shaper.py  track.py
flow-python/examples/logical_test/: __init__.py  buffer.py  logical_test.toml  printer.py  process.py  source.py
flow-python/examples/misc/: dump_resnet.py  image_client.py  video_client.py
flow-python/examples/misc/visualize_client/: index.html
flow-python/examples/simple_classification/: classify.py  client.py  dump.py  image_cpu.toml  image_test.toml  lite.py
flow-python/examples/simple_det_classify/: classify.py  dump.py  dump.txt  lite.py  video_cpu.toml
flow-python/examples/warehouse/detection_memd/: main.py  onnx_model.py
flow-python/examples/warehouse/detection_yolox/: __init__.py  build.py  lite.py  main.py  process.py  visualize.py
flow-python/examples/warehouse/quality_naive/: __init__.py  quality.py
flow-python/examples/warehouse/reid_alignedreid/: __init__.py  dump.py  lite.py  main.py  model.py  process.py  resnet.py
flow-python/examples/warehouse/track_iou/: __init__.py  track_iou.py
flow-python/megflow/: __init__.py  command_line.py  func_op.py  registry.py
flow-python/pyflow/: command_line.py
flow-python/src/: lib.rs
flow-quickstart/: Cargo.toml
flow-quickstart/src/: git.rs  lib.rs  log.rs  main.rs
flow-rs/: Cargo.toml
flow-rs/examples/: graph.rs  megflow_run.rs  run_with_plugins.rs
flow-rs/src/: broker.rs  future.rs  helper.rs  lib.rs  registry.rs  resource.rs  sandbox.rs
flow-rs/src/channel/: error.rs  inner.rs  mod.rs  receiver.rs  sender.rs  storage.rs
flow-rs/src/config/: graphviz.rs  insert.rs  interlayer.rs  mod.rs  parser.rs  presentation.rs  table.rs
flow-rs/src/debug/: feature.rs  mod.rs  protocol.rs  server.rs
flow-rs/src/envelope/: any_envelope.rs  envelope.rs  mod.rs
flow-rs/src/graph/: channel.rs  context.rs  debug.rs  mod.rs  node.rs  subgraph.rs
flow-rs/src/helper/: mod.rs
flow-rs/src/loader/: mod.rs
flow-rs/src/loader/python/: channel.rs  context.rs  envelope.rs  mod.rs  node.rs  port.rs  unlimited.rs  utils.rs
flow-rs/src/node/: bcast.rs  demux.rs  mod.rs  noop.rs  port.rs  reorder.rs  shared.rs  transform.rs
flow-rs/src/resource/: any_resource.rs  collection.rs  lazy.rs  mod.rs  storage.rs
flow-rs/tests/: 01-subgraph.rs  02-dyn-subgraph.rs  03-share-subgraph.rs  04-isolated.rs  nodes_ext.rs
(+114 files in other folders)
