[package]
name = "flow-message"
version = "0.3.0"
edition = "2018"

[features]
cross = ["byteorder", "dashmap", "enum-as-inner", "im", "paste", "pyo3"]
c = ["libc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = {version="1.4", optional=true}
dashmap = {version="4.0", optional=true}
enum-as-inner = {version="0.3", optional=true}
im = {version="15.0", optional=true}
paste = {version="1.0",optional=true}
pyo3 = {version="0.15.1", features=["abi3"], optional=true}
libc = {version="0.2",optional=true}
