[package]
name = "flow-plugins"
version = "0.1.0"
authors = ["megvii"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flow-rs = { path = "../flow-rs" }
toml = "0.5.8"
ffmpeg-next = { git = "https://github.com/Easonzero/rust-ffmpeg", branch = "master" }
futures-util = "0.3"
pyo3 = "0.14.1"
numpy = "0.14.1"
anyhow = "1.0.42"
image = "0.23.14"
oneshot = "0.1.2"
log = "0.4"
pretty_env_logger = "0.3"
rweb = { version="0.12.5", features=["openapi"] }
mime = "0.3.16"
indexmap = "1"
hyper = "0.14.11"
headers = "0.3.4"
serde = "1.0.127"
urlencoding = "2.1.0"
rand = "0.8.4"
serde_json = "1.0.66"
