[package]
name = "flow-plugins"
version = "0.3.0"
authors = ["megvii"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
python = [ "pyo3", "numpy", "flow-rs/python" ]
open-camera = ["ffmpeg-next/open-camera"]

[dependencies.ffmpeg-next]
git = "https://github.com/tpoisonooo/rust-ffmpeg"
branch = "dylib"

[dependencies]
flow-rs = { path = "../flow-rs", default-features = false }
toml = "0.5"
futures-util = "0.3"
pyo3 = { git = "https://github.com/pyo3/pyo3",  rev="233a14fa", features=["abi3"], optional=true }
numpy = { version = "0.15", optional=true }
anyhow = "1.0"
image = "0.23"
oneshot = "0.1"
log = "0.4"
pretty_env_logger = "0.3"
rweb = { version="0.12.5", features=["openapi"] }
mime = "0.3"
indexmap = "1"
hyper = "0.14"
headers = "0.3"
serde = "1.0"
urlencoding = "2.1"
rand = "0.8"
serde_json = "1.0"
samotop-async-trait = "0.2"
num = "0.4"
