[package]
name = "flow-python"
version = "0.3.0"
authors = ["megvii"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
debug = ["flow-rs/debug"]
extension-module = ["pyo3/extension-module"]

[dependencies]
flow-rs = { path="../flow-rs", features=["python"] }
pyo3 = { version = "0.15", features = ["abi3"] }
rand = "0.8.4"
libc = "0.2"
tempfile = "3.2.0"
ctrlc = "3.1.9"
log = "0.4"

[dependencies.flow-plugins]
path = "../flow-plugins"
features = [
    "python",
]
