[package]
name = "flow-quickstart"
version = "0.1.0"
edition = "2018"
authors = ["megvii"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
console = "0.14.1"
clap = "3.0.0-beta.2"
dirs = "4.0.0"
indicatif = "0.16.2"
git2 = "0.13"
libgit2-sys = "0.12"
walkdir = "2.3.2"
remove_dir_all = "0.7.0"
ignore = "0.4.18"
url = "2.2.2"
anyhow = "1.0.44"
toml = "0.5.8"
home = "0.5.3"
regex = "1"

[[bin]]
path = "src/main.rs"
name = "megflow_quickstart"
