[package]
name = "flow-rs"
version = "0.1.0"
authors = ["megvii"]
edition = "2018"

[dependencies]
flow-derive = { path="../flow-derive" }
anyhow = "1.0.38"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
lazy_static = "1.4.0"
ctor = "0.1"
pyo3 = "0.14.1"
dyn-clone = "1.0.4"
async-std = { version = "1.9.0", features = ["unstable", "attributes", "tokio1"] }
stackful = "0.1.0"
futures-util = "0.3"
futures-core = "0.3.15"
concurrent-queue = "1.2.2"
event-listener = "2.4.0"
numpy = "0.14.1"
ctrlc = "3.1.9"
log = "0.4.14"
oneshot = "0.1.2"
warp = "0.3"
serde_json = "1.0"
libc = "0.2.100"

[dev-dependencies]
clap = "3.0.0-beta.2"
flow-plugins = {path="../flow-plugins"}
rand = "0.8.4"
